--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+
+.idea/
+*.iml
+
+**/.DS_Store
+.directory
+
+/.classpath
+*/.classpath
+/.settings
+.settings/*
+*/.settings
